Native methods for preferences API should not be in libjava

XMLWordPrintable

    • b04


      In the modular JDK then the preferences API is its own module but unfortunately its native methods are linked into libjava. This need to be fixed (probably libprefs) and also the the native sources need to be moved from java/util into a java/util/prefs directory.

            Assignee:
            Alan Bateman
            Reporter:
            Alan Bateman
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: