8034043: Native methods for preferences API should not be in libjava 8034026: SCDynamicStoreConfig.m should not be in src/macosx/native/java/util

Reviewed-by: erikj, weijun, mchung