jdk/src/solaris/native/sun/misc/VM_md.c
@@ -23,16 +23,12 @@
  * questions.
  */
 
-/*
- * Solaris/Linux specific code to support logging.
- */
-
 #include <unistd.h>
 #include "jni_util.h"
 
 
 JNIEXPORT jboolean JNICALL
-Java_java_util_logging_FileHandler_isSetUID(JNIEnv *env, jclass thisclass) {
+Java_sun_misc_VM_isSetUID(JNIEnv *env, jclass thisclass) {
 
     /* Return true if we are in a set UID or set GID process. */
     if (getuid() != geteuid() || getgid() != getegid()) {
